added changepassword and date picker and read only

--- a/voyage/authentication/templates/authentication/changepassword.html
+++ b/voyage/authentication/templates/authentication/changepassword.html
@@ -13,9 +13,8 @@
 
         {% endfor %}
 
-    {% endif %}
-    <br>
-    <h1 style="text-align:center;">Edit Profile</h1>
+    {% endif %}<br>
+    <h1 style="text-align:center;">Change password</h1>
   	<hr>
 	<div class="row">
       <!-- left column -->
@@ -32,72 +31,23 @@
         <form class="form-horizontal" role="form" method="POST">
           {%csrf_token%}
           <div class="form-group">
-            <label class="col-lg-3 control-label">First Name:</label>
-            <div class="col-lg-8">
-              <input class="form-control" type="text" value="{{firstname}}" name="firstname" required>
-            </div>
-          </div>
-          <div class="form-group">
-            <label class="col-lg-3 control-label">Last Name:</label>
-            <div class="col-lg-8">
-              <input class="form-control" type="text" value="{{lastname}}" name="lastname" required>
-            </div>
-          </div>
-          <div class="form-group">
-            <label class="col-lg-3 control-label">Address:</label>
-            <div class="col-lg-8">
-              <input class="form-control" type="text" value="{{address}}" name="address" required>
-            </div>
-          </div>
-          <div class="form-group">
-            <label class="col-lg-3 control-label">DOB:</label>
-            <div class="col-lg-8">
-              <input class="form-control" type="date" value="{{ DOB }}"name="DOB" required>
-            </div>
-          </div>
-          <div class="form-group">
-            <label class="col-lg-3 control-label">Email:</label>
-            <div class="col-lg-8">
-              <input class="form-control" type="email" value="{{email}}" name="email" readonly>
-            </div>
-          </div>
-          <div class="form-group">
-            <label class="col-lg-3 control-label">Gender:</label>
-            <div class="col-lg-8">
-              <div class="ui-select">
-                <select id="Gender" class="form-control" name="gender"  required >
-                  <option value="{{gender}}" >{{gender}}</option>
-                  <option value="Male">Male</option>
-                  <option value="Female">Female</option>
-                  <option value="Others">others</option>
-                </select>
-              </div>
-            </div>
-          </div>
-          <div class="form-group">
-            <label class="col-md-3 control-label">Mobileno:</label>
+            <label class="col-md-4 control-label"> Current password:</label>
             <div class="col-md-8">
-              <input class="form-control" type="text" value="{{mobileno}}" name="mobileno" required>
+              <input class="form-control" type="password"  name="oldpassword" required>
             </div>
           </div>
-          <div class="form-group">
-            <label class="col-md-4 control-label"> Type Password to confirm:</label>
-            <div class="col-md-8">
-              <input class="form-control" type="password"  name="password" required>
-            </div>
-          </div>
-          <!-- <div class="form-group">
-            <label class="col-md-3 control-label">NEW PASSWORD:</label>
+           <div class="form-group">
+            <label class="col-md-3 control-label">New Password:</label>
             <div class="col-md-8">
               <input class="form-control" type="password" value="" name="newpassword" required>
             </div>
-          </div> -->
-          <!-- <div class="form-group">
+          </div> 
+           <div class="form-group">
             <label class="col-md-3 control-label">Confirm New password:</label>
             <div class="col-md-8">
-              <input class="form-control" type="password" value="" name="confirmnewpassword" required>
+              <input class="form-control" type="password" value="" name="confirmpassword" required>
             </div>
-          </div> -->
+          </div> 
           <div class="form-group">
             <label class="col-md-3 control-label"></label>
             <div class="col-md-8">
