updated flights.html and user.html
added logo images too in the images folder in templates folder

--- a/voyage/authentication/templates/authentication/signup.html
+++ b/voyage/authentication/templates/authentication/signup.html
@@ -197,7 +197,7 @@ border-radius:7px;
         </div>
         <div class="textbox" >
             <i class="fa fa-calendar" aria-hidden="true"></i>
-            <input type="date" placeholder="Date of birth" id="datepicker" name="DOB" required>
+            <input type="text" placeholder="Date of birth" id="datepicker" name="DOB" required onfocus="(this.type='date')" onfocusout="(this.type='text')">
         </div>
         <div class="textbox" >
             <i class="fa fa-phone" aria-hidden="true"></i>
